--- a/kernelModule/Makefile
+++ b/kernelModule/Makefile
@@ -1,5 +1,5 @@
-obj-m:=AuditModule.o
-AuditModule-objs   :=sdthook.o syscalltable.o netlinkp.o 
+obj-m:=Filebox.o
+Filebox-objs   :=new_read_write.o syscalltable.o  
 KDIR   := /lib/modules/$(shell uname -r)/build
 PWD   := $(shell pwd)
 default:
